  doc/example.conf for more information.
- Updated credits
- Removed ./Setup - No longer supported (read the docs!)
- Removed .NEW_CONFIG - No longer needed
- Removed INSTALL - Refer to NEW docs Unreal32docs.html
- Removed doc/commands.txt - Refer to NEW docs Unreal32docs.html
- Removed doc/faq - Refer to NEW docs Unreal32docs.html
- Removed doc/conf.doc - Refer to NEW Docs Unreal32docs.html
- Removed doc/unrealircd.doc - Refer to NEW docs Unreal32docs.html
- Removed doc/Elite.Changes - Out Dated
- Removed doc/services-install-guide - Refer to NEW docs Unreal32docs.html
- Modfied Unreal.nfo to include ref. to new docs
- Removed old docs and added new docs to Makefile.in
- Updated .CHANGES.NEW with new version # and link to docs
- Updated .RELEASE.NOTES with new version # and link to docs
- Added NEW doc/unreal32docs.html Docs
- Fixed an oper::swhois bug where the swhois was not propagated reported by FrostByghte
  (#0000247)
- Converted cr/lf to just lf in doc/unrea32docs.html
- Fixed a bug where set {} info wasn't cleared out at rehash
- Removed .NEW_CONFIG referenced from the win32 installer scripts
- Removed LEAST_IDLE, wtf did that do in the first place?
- Added version flags (O and o) for oper override and oper override verify
- FAKE_LAG_FOR_LOCOPS define added in config.h - enables local ops to
  override RFC1459 flood control
- Fixed grammar error thanks to MorPheus
- Fixed halfops kicking halfops bug thanks to Jim_
- Fixed a typo in /akill and /rakill obsolete depreciation notices reported by zak (#0000272)
- Added set::ssl::certificate and set::ssl::key to point to where we got the certificate
  PEM and the private key PEM
- Fixed a /invite bug where remote clients couldn't be invited, reported by Alzirr (#0000275)
- Fixed a bug where if the hostname didn't have a dot (ie. localhost) host cloaking broke
  reported by Ron885
- Rewrote /helpop to work as advertised, reported by FrostByghte (#0000217)
- Fixed a set {} memory leak on /rehash