@@ -1519,3 +1519,4 @@ seen. gmtime warning still there
   reported by Ron885
 - Rewrote /helpop to work as advertised, reported by FrostByghte (#0000217)
 - Fixed a set {} memory leak on /rehash
+- Made it so Unreal can still be launched by clicking wircd.exe when in NT service mode
